# poke-wilds-gd

./: .editorconfig  .gitignore  .gitmodules  .mcp.json.bak  AGENTS.md  ARCHITECTURE.md  GODOT_API_NOTES.md  PORTING_STATUS.md  README.md  THIRD_PARTY.md  icon.svg.import  project.godot  pyproject.toml
.claude/: GODOT_MCP_SETUP.md  mcp.json
.github/workflows/: legibility-garden.yml  repo-contracts.yml
docs/: QUALITY_SCORE.md  RELIABILITY.md  tech-debt-tracker.md
docs/design-docs/: core-beliefs.md  index.md
docs/product-specs/: battle-and-capture.md  bootstrap-and-overworld.md  building-and-placement.md  camping-crafting-survival.md  harvest-and-mutation.md  index.md  menu-and-save.md  vision-fidelity.md
docs/references/: godot-dap.md  miss-postmortem-protocol.md  snapshot-sidecar.md  source-assets.md  trace-events.md  vision-review-rubric.md
docs/registry/: art-anchors.toml  subsystems.toml
scenes/: Main.tscn  main.tscn
scenes/app/: Main.tscn
scenes/battle/: battle.tscn
scenes/overworld/: overworld.tscn  player.tscn
scenes/ui/: BagScreen.tscn  CampMenu.tscn  (+4 more)
scripts/: main.gd  main.gd.uid
tools/: art_geometry.py  check_architecture.py  check_art_anchors.py  check_change_contract.py  check_quality_docs.py  check_repo_contracts.py  contrast_check.py  cvd_sim.py  determinism_verify.py  generate_legibility_report.py  godot_dap_smoketest.py  graduation_ledger.py  legibility_lib.py  png_canvas.py  run_playtests.py  verify_all.py  vision_metrics.py  vision_review.py  visual_diff.py  visual_explain.py  visual_lint.py  visual_region_diff.py  vlm_reviewer.py
(+292 files in other folders)
