# Project metadata for the OPTIONAL verification extras only (Slice 6).
#
# The core verification tooling (tools/*.py except tools/vision_metrics.py) is
# STDLIB-ONLY and needs NO install — check_repo_contracts.py enforces this.
# This file exists solely to declare the one opt-in extra behind its own
# registry entry:
#
#     uv sync --extra vision          # or: pip install scikit-image
#     uv run python3 tools/vision_metrics.py --shots-dir .godot-smoke/shots \
#         --baseline-dir docs/generated/visual-baselines --out .godot-smoke/vision-metrics.json
#
# tools/vision_metrics.py degrades gracefully when scikit-image is absent
# (skipped note, exit 0) and NEVER gates CI — it is quarantine-tier
# corroboration only. Plain `python3 tools/...` keeps working untouched for
# everyone else. See docs/product-specs/vision-fidelity.md § Optional vision extra.

[project]
name = "poke-wilds-godot"
version = "0.0.0"
description = "PokeWilds Godot port — optional verification extras"
requires-python = ">=3.12"
dependencies = []  # core stays dependency-free: no install needed for any gate

[project.optional-dependencies]
vision = ["scikit-image>=0.22"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Metadata-only package: there is no Python package layout to ship (the tools
# run in place), so bypass hatchling's file selection for the wheel target.
[tool.hatch.build.targets.wheel]
bypass-selection = true
